// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification Variant matches snapshot size: default 1`] = `
<div>
  <div
    class="notification notification--default "
  >
    <p>
      This is a test 
      default
    </p>
  </div>
</div>
`;

exports[`Notification Variant matches snapshot size: error 1`] = `
<div>
  <div
    class="notification notification--error "
  >
    <p>
      This is a test 
      error
    </p>
  </div>
</div>
`;

exports[`Notification Variant matches snapshot size: info 1`] = `
<div>
  <div
    class="notification notification--info "
  >
    <p>
      This is a test 
      info
    </p>
  </div>
</div>
`;

exports[`Notification Variant matches snapshot size: primary 1`] = `
<div>
  <div
    class="notification notification--primary "
  >
    <p>
      This is a test 
      primary
    </p>
  </div>
</div>
`;

exports[`Notification Variant matches snapshot size: quaternary 1`] = `
<div>
  <div
    class="notification notification--quaternary "
  >
    <p>
      This is a test 
      quaternary
    </p>
  </div>
</div>
`;

exports[`Notification Variant matches snapshot size: secondary 1`] = `
<div>
  <div
    class="notification notification--secondary "
  >
    <p>
      This is a test 
      secondary
    </p>
  </div>
</div>
`;

exports[`Notification Variant matches snapshot size: success 1`] = `
<div>
  <div
    class="notification notification--success "
  >
    <p>
      This is a test 
      success
    </p>
  </div>
</div>
`;

exports[`Notification Variant matches snapshot size: tertiary 1`] = `
<div>
  <div
    class="notification notification--tertiary "
  >
    <p>
      This is a test 
      tertiary
    </p>
  </div>
</div>
`;

exports[`Notification Variant matches snapshot size: warning 1`] = `
<div>
  <div
    class="notification notification--warning "
  >
    <p>
      This is a test 
      warning
    </p>
  </div>
</div>
`;
